<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">BT_Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">清除信息</string>
    <string name="action_read">读取数据</string>
    <string name="action_more">关于</string>
    <string name="action_connect">连接蓝牙</string>

    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="str_num">编号:</string>
    <string name="str_rule">规则:</string>
    <string name="str_bt_config">设置</string>
    <string name="str_bt_scan">扫描设备</string>
    <string name="str_other_device">搜索到的设备:</string>
    <string name="str_paired_device">已配对:</string>
    <string name="str_none_paired">No devices have been paired</string>`
    <string name="str_none_found">未发现设备!</string>
    <string name="str_select_device">选择连接设备:</string>
    <string name="str_scanning">正在搜索...</string>
    <string name="str_bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="str_not_connected">蓝牙未连接!</string>
    <string name="str_app_read">读取内容</string>
    <string name="str_bt_read">读取成绩</string>
    <string name="str_input_waring">输入错误，请重新输入！</string>
    <string name="str_send_success">数据发送成功！</string>
    <string name="str_path">路径:</string>
    <string name="action_disconnect">断开蓝牙</string>
    <string name="str_read_success">数据接收成功！</string>
</resources>
